config/certs/ingress/control-gateway-sds.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: control-gateway
  namespace: travel-control
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
#    - control.travel-control.example.com
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: travel-control-credential
